fix problem with training tag on mobile

--- a/app/assets/sass/erc.scss
+++ b/app/assets/sass/erc.scss
@@ -38,7 +38,7 @@ $erc-green-border: #008000;
 }
 .govuk-header__content {
     @media only screen and (min-width: 169px) { 
-    border: 30px solid #fff;
+    border: 10px solid #fff;
     }
     a {
         text-decoration: none;
